# opencor

./: .clang-format  .clang-tidy  .codespellexclude  .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD.txt  CMakeLists.txt  Jenkins.txt  LICENSE.txt  NOTICE.txt  NOTICE.txt.in  README.md  README.rst  README.txt  appveyor.yml  build.bat  buildall  buildall.bat  cd  cd.bat  ci  ci.bat  clean  clean.bat  cleanall  cleanall.bat  cleanproj  cleanproj.bat  cleanprojall  cleanprojall.bat  format  format.bat  help  help.bat  jenkins.txt  make  make.bat  make32.bat  (+25 more)
doc/: CMakeLists.txt  OpenCOR.qhcp  OpenCOR.qhcp.in  OpenCOR.qhp  README.md  README.rst  README.txt  authors.html  conf.py.in  contactUs.html  contents.html  developerIndex.html  download.php  downloads.html  downloads.php  index.html  introduction.html  knownIssues.html  known_issues.html  license.html  licensing.html  programming.html  supportedPlatforms.html  team.html  userIndex.html  whatIsNew.html  whatIsNew.js
doc/cor/: index.html
doc/cor/res/: stylesheet.css
doc/developer/: bestPractices.html  buildAndRun.html  buildAndTest.html  buildRunAndTest.html  buildTestAndRun.html  developBuildTestAndPackage.html  fileStructure.html  functionalTests.html  index.html  internationalisation.html  miscellaneous.html  package.html  plugins.html  preRequirements.html  prerequisites.html  programming.html  scrapbook.html  thirdPartyLibraries.html
doc/developer/develop/: codingStyle.html  index.html  internationalisation.html  plugins.html  tests.html
doc/developer/develop/plugins/: Sample.html  SampleTools.html  SampleView.html  SampleWindow.html  index.html
doc/developer/develop/res/: qtdependencies  stylesheet.css
doc/developer/functionalTests/: index.html
doc/developer/functionalTests/res/cellml/: definite_integral_ode_model.cellml  underconstrained_dae_model.cellml
doc/developer/functionalTests/res/combine/: fink_slepchenko_moraru_watras_schaff_loew_2000v2.omex  noble_1962.omex  smith_chase_nokes_shaw_wake_2004.omex  two_master_sedml_files.omex
doc/developer/functionalTests/res/sedml/: noble_1962.sedml  noble_1962_V_iK.sedml  noble_1962_V_time.sedml  noble_1962_gL_time.sedml  noble_1962_iK_V.sedml  noble_1962_iK_time.sedml  noble_1962_local.sedml  noble_1962_remote.sedml  (+4 more)
doc/developer/models/: definiteintegral_model.cellml  no_voi_model.cellml  over_constrained_ode_model.cellml  overconstrained_model.cellml  overconstrained_ode_model.cellml  parabola_as_dae_model.cellml  parabola_as_ode_model.cellml  parabola_dae_model.cellml  parabola_variant_as_dae_model.cellml  simple_dae_model.cellml  under_constrained_ode_model.cellml  underconstrained_model.cellml  underconstrained_ode_model.cellml  units_model.cellml  unsuitably_constrained_ode_model.cellml  unsuitablyconstrained_model.cellml
doc/developer/res/: menu.js  qglobal.patch  qtdependencies  stylesheet.css
doc/developers/: programming.html  scrapbook.html
doc/developers/res/: stylesheet.css
doc/downloads/: index.html  index.js  index.json  index.php  oldSnapshots.php  previousSnapshots.html  previousSnapshots.js  previousSnapshots.json  previousSnapshots.php
doc/python/: OpenCOR_Python.rst
doc/res/: common.css  common.js  developerStylesheet.css  downloads.js  downloads.php  image.html  menu.js  stylesheet.css  userStylesheet.css  webCommon.css  websiteStylesheet.css
doc/user/: authors.html  contactUs.html  dissemination.html  howToGetStarted.html  index.html  introduction.html  knownIssues.html  knownIssuesAndLimitations.html  knownIssuesLimitations.html  knownLimitations.html  licensing.html  plugins.html  prerequisites.html  supportedPlatforms.html  team.html  whatIsNew.html  whatIsNew.js  whatisNew.js
doc/user/plugins/: CellMLAnnotationView.html  CellMLModelRepository.html  CellMLTools.html  FileBrowser.html  FileOrganiser.html  Help.html  PrettyCellMLView.html  RawCellMLView.html  RawView.html  SingleCellSimulationView.html  SingleCellView.html  api.html  editing.html  index.html  miscellaneous.html  organisation.html  simulation.html  thirdParty.html
doc/user/plugins/api/: index.html
doc/user/plugins/dataStore/: BioSignalMLDataStore.html  CSVDataStore.html
doc/user/plugins/editing/: CellMLAnnotationView.html  CellMLTextView.html  PrettyCellMLView.html  RawCellMLView.html  RawSEDMLView.html  RawTextView.html  RawView.html  index.html
doc/user/plugins/miscellaneous/: CellMLTools.html  Help.html  HelpWindow.html  WebBrowserWindow.html  index.html
doc/user/plugins/organisation/: CellMLModelRepository.html  CellMLModelRepositoryWindow.html  FileBrowser.html  FileBrowserWindow.html  FileOrganiser.html  FileOrganiserWindow.html  PMRWindow.html  PMRWorkspacesWindow.html  PMRWorskspacesWindow.html  PhysiomeModelRepositoryWindow.html  index.html
doc/user/plugins/simulation/: SimulationExperimentView.html  SingleCellSimulationView.html  SingleCellView.html  index.html
doc/user/plugins/solver/: CVODESSolver.html  CVODESolver.html  ForwardEulerSolver.html  FourthOrderRungeKuttaSolver.html  HeunSolver.html  IDASSolver.html  IDASolver.html  KINSOLSolver.html  SecondOrderRungeKuttaSolver.html
doc/user/plugins/tool/: CellMLTools.html
doc/user/plugins/tools/: CellMLTools.html
doc/user/res/: cellmlText.css  image.html  imagepopup.js  menu.js  stylesheet.css  webCommon.css
doc/user/userInterfaces/: commandLineInterface.html  graphicalUserInterface.html  index.html
doc/users/: knownIssues.html
doc/users/res/: stylesheet.css
extra/qtsingleapplication/: CMakeLists.txt
src/plugins/api/CellML/: CMakeLists.txt
src/plugins/api/CellMLAPI/: CMakeLists.txt  README.rst  README.txt
src/plugins/core/: CMakeLists.txt
src/plugins/core/src/: filemanager.cpp
src/plugins/dataStore/BSMLDataStore/: CMakeLists.txt
src/plugins/edit/viewer/: CMakeLists.txt  mmlviewerwidget.h
src/plugins/miscellaneous/PythonWrapper/: CMakeLists.txt
src/plugins/sample/SampleExternal/: CMakeLists.txt
winConsole/: CMakeLists.txt
winConsole/res/: OpenCOR.qrc
winConsole/src/: main.cpp
windows/: CMakeLists.txt  main.cpp
windows/src/: main.cpp
(+4162 files in other folders)
